# SystemDesign

./: README.md  workspace.dsl
lab2/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  schema.sql  test_api.sh
lab2/configs/: config.yaml
lab2/src/: main.cpp
lab2/src/handlers/: auth_login_handler.hpp  exercises_handler.cpp  user_by_login_handler.hpp  user_search_handler.hpp  user_stats_handler.hpp  user_workouts_handler.hpp  workout_exercises_handler.hpp
lab2/src/services/: auth_service.cpp  auth_service.hpp  (+2 more)
lab3/: IMPLEMENTATION_SUMMARY.md  README.md  data.sql  docker-compose.yaml  queries.sql
lab3/docs/: openapi.yaml
lab4/: .gitignore  README.md  data.js  docker-compose.yaml  optimization.md  schema_design.md  setup.sh
lab4/configs/: config.yaml
lab4/src/: main.cpp
lab5/: CMakeLists.txt  README.md  docker-compose.yaml  performance_design.md  queries.js  schema.sql  test_api.sh  validation.js
lab5/configs/: config.yaml
lab5/docs/: openapi.yaml
lab5/src/database/: db_component.hpp
lab5/src/handlers/: auth_login_handler.cpp  auth_register_handler.cpp  auth_register_handler.hpp  exercises_create_handler.cpp  exercises_create_handler.hpp  exercises_handler.cpp  mongo_stats_handler.cpp  mongo_stats_handler.hpp  mongo_workouts_handler.cpp  mongo_workouts_handler.hpp  user_by_login_handler.cpp  users_handler.cpp
lab5/src/middleware/: auth_middleware.cpp
lab5/src/models/: exercise.hpp  workout_exercise.hpp
lab5/src/services/: workout_service.cpp
lab5/src/utils/: http_response.hpp  rate_limiter.hpp  response_cache.hpp
(+19 files in other folders)
